ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tape_Code__c/Tape_Code__c.object-meta.xml
<CustomObject>
    <description>This records the tape code details for IKO products which helps with the claim and warranty process</description>
    <label>Tape Code</label>
    <nameField>
        <label>Tape Code Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tape Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>