ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tape_Code__c/fields/Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Date__c</fullName>
    <description>This is used to record the date of manufacture for the product for the tape code.</description>
    <label>Manufacture Date</label>
    <type>DateTime</type>
</CustomField>