ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tape_Code__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This denotes the product for the tape code</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tape Codes</relationshipLabel>
    <relationshipName>Tape_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>