ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tape_Code__c/fields/Product_Code_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Value__c</fullName>
    <description>Ticket CLAIMSV2-118</description>
    <label>Product Code Value</label>
    <length>32</length>
    <type>Text</type>
</CustomField>