ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tape_Code__c/fields/Product_Color_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Color_Value__c</fullName>
    <label>Product Color Value</label>
    <length>60</length>
    <type>Text</type>
</CustomField>