ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tape_Code__c/fields/Product_Colour__c.field-meta.xml
<CustomField>
    <fullName>Product_Colour__c</fullName>
    <description>this is the colour of the product</description>
    <formula>Product__r.Colour__c</formula>
    <label>Product Colour</label>
    <type>Text</type>
</CustomField>